fix text align for page-top

--- a/css/styles.css
+++ b/css/styles.css
@@ -18,6 +18,8 @@ span {
   height: 500px;
   margin-top: 0;
   color: white;
+  text-align: right;
+  padding-right: 32%;
 }
 
 ol {
@@ -55,3 +57,7 @@ li {
 .panel-body {
   font-size: 17px;
 }
+
+/*.linkedin {
+  margin-top: 12%;
+}*/
